# mavgrasp

./: CMakeLists.txt  README.md  mavgrasp.files  mavgrasp.includes  package.xml
bag/: subset.bag
include/mavgrasp/: setpoint_pub.h
launch/: px4.launch  px4_pluginlists.yaml  test.launch  uav_mocap.launch  uav_mocap.launch~
src/: getDesiredStateFromTrajectory.m  getDesiredStateFromTrajectory.m~  getTrajectoryCoef.m  getTrajectoryCoef1.m  main.cpp  setpoint_pub.cpp
src/config/: ReadMe.md  Twaypoints.txt  coefd0.txt  coefd0.txt~  coefd1.txt  coefd2.txt  coefd3.txt  coefd4.txt
